public class Item 
{
    private string _name;
    private string _description;
    private string _image;
    private Dictionary<string,int> _damageBonuses;
    private Dictionary<string, int> _defenseBonsuses;
    
}