@startuml Dungeon
static class Program {
    +table: Table
}
abstract class Encounter {
    #name: string
    #description: string
    #rewards: Item[]
    #card: TextImage
    #image: TextImage
    #Draw(): void
    #Run(): boolean
    #GetReward(): Item[]
}
together {
    class SimpleEncounter {
        -hp: int
        -damage: int
        -type: enum
    }
    class BossEncounter {
        -hp: int
        -damage1: int
        -type1: enum
        -damage2: int
        -type2: enum
        -weak: enum
    }
    class CompoundEncounter {
        -Encounters: SimpleEncounter[]
    }
    class TrapEncounter {
        -damage: int
        -type: enum
    }
}
class Player {
    -name: string
    -items: Item[]
    -health: int
    -maxHealth: int
}
class Table {
    players: Player[]
    encountersGrid: List<Encounter>[2][3][3]
    currentPlayer: int

    +AddPlayer(name: string)
    +StartGame()
    +NextPlayer(): Boolean
    +GetWinner(): Player
    -DrawTable(): void
    -ZoomCard(): void
}
class Item {
    -name: string
    -description: string
    -damageBonuses: string[]
    -healPower: Boolean
    -healAmount: int
    -attackBonuses: string[]
}
class TextImage {
    -textArray: string[]
    -width: int
    -height: int
    +Draw(img:string, x:int, y:int)
    +DrawCard(x:int, y:int, width:int, height:int)

}

skinparam groupInheritance 2

Program o-- Table
Encounter <|-- SimpleEncounter
Encounter <|-- BossEncounter
Encounter <|-- CompoundEncounter
Encounter <|-- TrapEncounter
Player "1" o- "many" Item
Encounter o- TextImage
Table o- TextImage
Encounter o- Item
Player o- Encounter
Player o- TextImage
Table o- Encounter
Item o- TextImage
CompoundEncounter o- SimpleEncounter

@enduml


